--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -240,6 +240,7 @@ background-color: hsl(0, 0%, 90%);
 
 /*Button Theming 2*/
 .wB-t1 {
+  color: white;
   background-color: hsl(225, 21%, 49%);
   border-color: hsl(224, 28%, 35%);
 }
@@ -281,7 +282,7 @@ background-color: hsl(0, 0%, 90%);
 
   .calculator {
     width: 300px;
-    margin: 40px 0;
+    top: 38%;
   }
 
   .calc-body-container {
