--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,12 +56,7 @@ label {
   display: flex;
   font-size: 0.7rem;
   align-items: center;
-}
-
-.right-cont p {
-  position: relative;
-  top: 10px;
-  right: 18px;
+  margin-top: 7px;
 }
 
 .toggle-cont {
@@ -69,7 +64,8 @@ label {
 }
 
 .toggle-text {
-  margin-top: 15%;
+  float: left;
+  margin-top: 31%;
   margin-right: 15%;
 }
 
